# Agent-Blackbox-Arena

./: .gitignore  BENCHMARK_SPEC.md  BLOG.md  Dockerfile  FINAL_EXECUTION_LOG.md  FINAL_FORM_SUBMISSION_CHECKLIST.md  FINAL_HF_TRAINING_GO.md  FINAL_RECENT_H200_RUNS_REPORT.md  FINAL_SAFE_BASELINE.md  FINAL_SUBMISSION_AUDIT.md  GENERALIZATION_AND_CLAIM_AUDIT.md  HF_HARDENED_05B_RERUN_READY.md  JUDGING_CRITERIA_ALIGNMENT.md  POST_HARDENING_05B_RESULTS_FOR_REVIEW.md  README.md  SAFETY.md  SUBMISSION_EVIDENCE.md  TRAINING.md  TRAINING_RUN_LOG.md  hf_job_05b_challenge_curriculum_69eda5a4d70108f37acdfa48_logs.txt  openenv.yaml  pyproject.toml  requirements.txt
agent_blackbox/: __init__.py  certificate.py  client.py  incidents.py  models.py  render.py  reward.py  verifier.py
examples/: certificate_example.json  stale_retrieval_demo_trace.json
notebooks/: Agent_BlackBox_Arena_Training_Rerun.ipynb
outputs/: baseline_summary.json  results.csv
scripts/: diagnose_challenge_failures.py  evaluate_baselines.py  extract_hf_job_evidence.py  generalization_audit.py  hf_run_05b_challenge_curriculum.sh  hf_run_05b_hardened.sh  hf_run_15b_challenge_curriculum.sh  hf_run_4b_stretch.sh  hf_run_larger_model_fast_stretch.sh  hf_run_larger_model_stretch.sh  make_plots.py  package_submission_evidence.py  plot_model_eval.py  plot_training_tracking.py  self_check.py  space_smoke.py  training_preflight.py
server/: agent_blackbox_environment.py  app.py  ui.py
tests/: test_certificate.py  test_hidden_leakage.py  test_missing_verification.py  test_permission_scope.py  test_reset_step_state.py  (+5 more)
(+51 files in other folders)
